<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_scrolling"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScrollingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_apps"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-light"/>

        <Button
            android:id="@+id/spotifyAppButton"
            android:onClick="onButtonClick"
            android:text="@string/spotify_app_title"
            style="@style/MyButton.Theme"/>

        <Button
            android:id="@+id/scoresAppButton"
            android:onClick="onButtonClick"
            android:text="@string/scores_app_title"
            style="@style/MyButton.Theme"/>

        <Button
            android:id="@+id/libraryAppButton"
            android:onClick="onButtonClick"
            android:text="@string/library_app_title"
            style="@style/MyButton.Theme"/>

        <Button
            android:id="@+id/buildItAppButton"
            android:onClick="onButtonClick"
            android:text="@string/buildit_app_title"
            style="@style/MyButton.Theme"/>

        <Button
            android:id="@+id/readerAppButton"
            android:onClick="onButtonClick"
            android:text="@string/reader_app_title"
            style="@style/MyButton.Theme"/>

        <Button
            android:id="@+id/capStoneAppButton"
            android:onClick="onButtonClick"
            android:text="@string/capstone_app_title"
            style="@style/MyButton.Theme.Accent"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
